Fixed extra space around Note content.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -389,14 +389,14 @@ ul.scope-list > li.scope-item {
 }
 
 .note.prop {
-	white-space: pre;
 	border: 1px solid #eee;
-	padding: 1px;
+	margin: 2px; padding: 2px;
 	background-color: #fff;
 	vertical-align: top;
 }
 .note.prop, .note.prop > .shadow { border-radius: 2px; -webkit-border-radius: 2px; -moz-border-radius: 2px; }
 .note.prop > .shadow { opacity: 0.05; }
+.note.prop > .content { white-space: pre; }
 
 .priority.prop {
 	font-weight: bold;
